rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_conversion_wagner_ii.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
CONVERSION["Wagner II",
    METHOD["Wagner II"],
    PARAMETER["Longitude of natural origin",1,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8802]],
    PARAMETER["False easting",1,
        LENGTHUNIT["Metre",1],
        ID["EPSG",8806]],
    PARAMETER["False northing",1,
        LENGTHUNIT["Metre",1],
        ID["EPSG",8807]]]
