rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_cs-2.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
CS[Cartesian,2],
    AXIS["longitude",northNorthEast,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit2",1]]
